--- a/style.css
+++ b/style.css
@@ -5,9 +5,10 @@
 }
 .basliq{
     width: 100%;
-    height: 580px;
-    background-image: url(./hero_2.jpg.webp);
+    min-height: 580px;
+    background-image: url(./Picture/hero_2.jpg.webp);
     background-size: cover;
+    background-repeat: no-repeat;
     padding: 30px 0;
 }
 .container{
@@ -25,11 +26,13 @@
     align-items: center;
     margin: 0 auto;
     border-radius: 5px;
+    font-size: 22px;
 }
 .navbar_lists{
     display: flex;
     align-items: center;
     gap: 30px;
+    font-size: 18px;
 }
 .navbar_lists  li{
    list-style-type: none;
@@ -40,6 +43,7 @@
     background-color: #30e3ca;
     border-radius: 5px;
     color: white;
+    font-size: 16px;
 }
 .navbar_basliq > h1 > span{
     color: #30e3ca;
@@ -62,16 +66,56 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 350px;
+    height: 320px;
 }
 .basliq_esas_yazi  h2{
-    font-size: 30px;
+    font-size: 40px;
     color: white;
+}
+.basliq_esas_yazi p{
+    font-size: 24px;
 }
 .basliq_yazi{
     width: 600px ;
-    /* height: 20px; */
-    /* margin:auto; */
     text-align: center;
+}
+
+.basliq_form{
+    width: 80%;
+    min-height: 80px;
+    margin: 0 auto;
+    opacity: 2;
+    background-color: rgba(255, 255, 255, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.basliq_form_esas input,select{
+    padding: 10px;
+    border: 0;
+    margin: 5px 20px;
+    width: 220px;
+    border-radius: 5px;
+    font-size: 16px;
+}
+.basliq_form_esas .location{
+    padding: 10px;
+    border: 0;
+    margin: 0 15px;
+    width: 250px;
+    border-radius: 5px;
 
 }
+.basliq_form_esas button{
+    padding: 10px;
+    border: 0;
+    margin: 5px 20px;
+    background-color: #48ebd5;
+    border-radius: 5px;
+    font-size: 16px;
+    width: 130px;
+}
+.basliq_form_esas button:hover{
+    background-color: #09ecce;
+}
+
